@@ -2,6 +2,7 @@ package org.testng.xml;
 
 import java.util.Properties;
 
+import org.testng.TestNGException;
 import org.testng.reporters.XMLStringBuffer;
 
 /**
@@ -64,25 +65,36 @@ public class XmlMethodSelector {
     m_priority = priority;
   }
   
+  private void ppp(String s) {
+    System.out.println("[XmlMethodSelector] " + s);
+  }
+  
   public String toXml(String indent) {
     XMLStringBuffer xsb = new XMLStringBuffer(indent);
 
     xsb.push("method-selector");
     
-    if(null != m_className) {
+    ppp("CLASSNAME:" + m_className);
+    
+    if (null != m_className) {
       Properties clsProp = new Properties();
       clsProp.setProperty("name", getClassName());
       if(getPriority() != -1) {
+        ppp("SETTING PRIORITY:" + getPriority());
         clsProp.setProperty("priority", String.valueOf(getPriority()));
       }
       xsb.addEmptyElement("selector-class", clsProp);
     }
-    else {
+    else if (getLanguage() != null) {
       Properties scriptProp = new Properties();
+      ppp("LANGUAGE:" + getLanguage());
       scriptProp.setProperty("language", getLanguage());
       xsb.push("script", scriptProp);
       xsb.addCDATA(getExpression());
       xsb.pop("script");
+    }
+    else {
+      throw new TestNGException("Invalid Method Selector:  found neither class name nor language");
     }
     
     xsb.pop("method-selector");
