@@ -29,7 +29,7 @@
 <!--
       <class name="test.annotationtransformer.AnnotationTransformerClassSampleTest" />
 -->
-      <class name="test.thread.FactoryTest" />
+      <class name="test.dataprovider.MethodTest" />
     </classes>
   </test>
 
